# indian-cc-statements

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
indian_cc_statements/: __init__.py  cli.py  parser.py
